...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Agenda Académica'),
        actions: [
          if (_syncing)
            const Padding(
              padding: EdgeInsets.all(14),
              child: SizedBox(
                width: 20,
...
        onPressed: () => _abrirFormulario(),
        backgroundColor: kAmarillo,
        foregroundColor: kVerdeOscuro,
        elevation: 4,
        icon: const Icon(Icons.add),
        label: const Text(
          'Nuevo',
          style: TextStyle(fontWeight: FontWeight.w700),
        ),
      ),
    );
  }
}
...
